fixed align of footer

--- a/src/pages/Converter/Converter.module.css
+++ b/src/pages/Converter/Converter.module.css
@@ -4,7 +4,7 @@
 }
 
 .title {
-    margin-top: 1rem;
+    margin-top: 25px;
     text-align: center;
 }
 
