--- a/src/pages/Rates/Rates.module.css
+++ b/src/pages/Rates/Rates.module.css
@@ -10,7 +10,7 @@
 }
 
 .title {
-    margin-top: 1rem;
+    margin-top: 25px;
     text-align: center;
 }
 
